# Advent-of-Code

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
misc/: cacert_loc.py
src/advent_of_code/: advent_of_code_requests.py  console.py
src/advent_of_code/year_2022/: day_1.py  day_10.py  day_11.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
tests/: test_advent_of_code_requests.py  test_console.py
tests/year_2022/: test_day_1.py  test_day_10.py  test_day_11.py  test_day_2.py  test_day_3.py  test_day_4.py  test_day_5.py  test_day_6.py  test_day_7.py  test_day_8.py  test_day_9.py
