[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "My attempts at the challenges from Advent of Code 2022."
authors = ["Daniel"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
certifi = "^2022.9.24"
requests = "^2.28.1"
click = "^8.1.3"
nox = "^2022.11.21"
nox-poetry = "^1.0.2"
types-requests = "^2.28.11.5"
types-mock = "^4.0.15.2"
pytest-mock = "^3.10.0"
mock = "^4.0.3"

[tool.poetry.scripts]
aoc = "advent_of_code.console:cli"
print-cacert-loc = "misc.cacert_loc:print_loc"

[tool.coverage.report]
show_missing = true
fail_under = 100 # Fail if the coverage is under 100%

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
setuptools = "^65.6.3"
coverage = {extras = ["toml"], version = "^6.5.0"}
pytest-cov = "^4.0.0"
pre-commit = "^2.20.0"
black = "^22.10.0"
flake8 = "^6.0.0"
flake8-annotations = "^2.9.1"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^22.10.27"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.2"
darglint = "^1.8.1"
types-requests = "^2.28.11.5"
pytest = "^7.2.0"
types-mock = "^4.0.15.2"
pytest-mock = "^3.10.0"
safety = "^2.3.3"
typeguard = "^2.13.3"
pygments = "^2.13.0"
mock = "^4.0.3"
flake8-black = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
